# codeprov

./: README.md  codeprov.py  pyproject.toml
codeprov/: artifact.py  licenses.marisa  licenses.py  parser.py  scanner.py
